# tubeup

./: .codezero.yml  .gitignore  .travis.yml  Makefile  README.m  README.md  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tubeup.py  youtube2internetarchive.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  unit-test.yml
tests/: constants.py  test_tubeup.py  test_utils.py
tests/test_tubeup_files/: EA_Play_2016_Live_from_the_Novo_Theatre-42850523.info.json  Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.info.json  Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.info_no_tags.json  Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.info_no_uploader.json  description_text_null.json  ia_config_for_test.ini  youtube-6iRV8liah8A.info.json  youtube-6iRV8liah8A.info_no_date.json
tests/test_tubeup_files/files_for_upload_and_download_tests/: KdsN9YhkDrY.description  KdsN9YhkDrY.info.json  Mountain_3_-_Video_Background_HD_1080p-6iRV8liah8A.annotations.xml  youtube-6iRV8liah8A.description
tubeup/: TubeUp.py  __init__.py  __main__.py  utils.py
tubeup/locale/: tubeup.pot
tubeup/locale/en_US/: tubeup.po
