[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tubeup"
dynamic = ["version"]
description = "VOD service to Archive.org uploader"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "internetarchive>=5.0.3",
    "docopt==0.6.2",
    "yt-dlp",
]

[project.scripts]
tubeup = "tubeup.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "tubeup.__version__"}
